stuff for commanding agents being added
